# aefarrell.github.io

./: .gitignore  .nojekyll  Gemfile  README.md  _config.yml  _quarto.yml  about.html  about.qmd  archive.html  archive.qmd  feed.xml  index.html  index.qmd  listings.json  projects.html  projects.qmd  robots.txt  search.json  sitemap.xml  styles.css
_includes/: sidebar.html  social-share.html
_layouts/: home.html  single.html
_notebooks/: 2020-11-20-butane_leak_example.ipynb  2020-12-05-gaussian_dispersion_example.ipynb  2021-04-10-turbulent_jet_example.ipynb  2021-05-22-building_infiltration_example.ipynb  2021-07-18-smoke_days.ipynb  2021-09-22-federal_election.ipynb  2022-04-08-turbulent_jet_notes.ipynb  2022-05-08-turbulent_jet_notes_part_2.ipynb  2022-06-10-integrated_puff.ipynb  2022-09-23-adiabatic-compressible-flow.ipynb  2022-11-10-hydrogen_blending.ipynb  2023-01-15-intpuff2_successive_approximations.ipynb  2023-03-12-Britter-McQuaid.ipynb  2023-05-22-indoor_air_quality.ipynb  2023-09-15-engineering_a_cup_of_coffee.ipynb  2023-11-26-impossible_bowling.ipynb  2024-01-13-fugitive-hydrogen.ipynb  2024-03-23-engineering_a_cup_of_coffee_part-2.ipynb  2024-09-22-hydrogen_release_modeling.ipynb  2024-10-28-relief_valve_sizing.jl  2025-01-24-vessel_blowdown_ideal_gases.jl  (+3 more)
_pages/: about.md
posts/atmotube_data_logging/: index.html  index.ipynb  pyproject.toml
posts/hydrogen_release_modeling/: 2024-09-22-hydrogen_release_modeling.html  index.html  index.ipynb  pyproject.toml  references.bib
posts/impossible_bowling/: index.html  index.ipynb  pyproject.toml
(+194 files in other folders)
