[project]
name = "atmotube-data-logging"
version = "0.1.0"
description = ""
authors = [
    {name = "allan",email = "75338859+aefarrell@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleak (>=2.1.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "aiocsv (>=1.4.0,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
