[project]
name = "hydrogen-release-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "allan",email = "75338859+aefarrell@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "hyram (>=6.1,<7.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
