[project]
name = "impossible-bowling"
version = "0"
description = "A post about bowling scores in 5-pin bowling."
authors = [
    {name = "allan",email = ""}
]
readme = ""
requires-python = ">=3.14"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
